# passkit

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt
.github/: codeql-config.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
demos/: demo_01_registration_assertion.py  demo_02_phishing_resistance.py  demo_03_replay_protection.py  demo_04_clone_detection.py  demo_05_attestation_policy.py  demo_06_assurance_scoring.py  demo_07_policy_evaluation.py  demo_08_cross_device_qr.py  demo_09_html_report.py  demo_10_tamper_matrix.py  run_all.py
docs/: ARCHITECTURE.md  ASSURANCE.md  CLI.md  SECURITY_MODEL.md  WEBAUTHN.md
examples/: policy_consumer_aal2.json  policy_fedgov_aal3.yaml
passkit/: __init__.py  __main__.py  _cbor.py  _cose.py  _util.py  cli.py  errors.py  report.py  testing.py
passkit/attestation/: __init__.py  metadata.py  parser.py  policy.py
passkit/challenge/: __init__.py  builder.py  store.py
passkit/policy/: __init__.py  evaluator.py  model.py
passkit/webauthn/: __init__.py  authdata.py  clientdata.py  verifier.py
passkit/zerotrust/: __init__.py  scorer.py
tests/: conftest.py  test_attestation.py  test_authdata.py  test_cbor.py  test_challenge.py  test_cli.py  test_clientdata.py  test_cose.py  test_policy.py  test_verifier.py  test_zerotrust.py
